--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JPEG to PNG Converter</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="google-site-verification" content="-8XntyhXyfBbcDRgYyDeifrvhLPsexTT2MjCPfZ-n8A" />
 </head>
 <body>
   
